Ajout des 2 premiers onglets.

--- a/src/app/content/pages/me/me.html
+++ b/src/app/content/pages/me/me.html
@@ -1,1 +1,106 @@
-<p>me works!</p>
+<div id="container">
+  <div id="nameContainer">
+    <img id="profilIcon" src="assets/_photo%20de%20profil.jpg"/>
+    <p>Arnaud ALET</p>
+  </div>
+  <h1 class="title">
+    • Mon histoire avec la programmation
+  </h1>
+  <p>
+    Je vais vous expliquer rapidement comment j'ai découvert la programmation et comment j'ai poursuivit mon
+    apprentissage dans ce domaine.
+  </p>
+  <h1 class="title">
+    • Comment j'ai découvert la programmation ?
+  </h1>
+  <p>
+    J'ai reçu en 6ème mon premier ordinateur ce qui ma permit de découvrir pour la "première fois" l'informatique. J'ai
+    tout de suite chercher à comprendre les mécanismes et les fonctionnements des logiciels.
+    <br> <br>
+    Quelques mois après je découvrais le jeux-vidéo <a href="https://minecraft.net">Minecraft</a> qui m'as vraiment
+    interpelé car une possibilité de
+    configuration, et de modification énorme grâce au système de plugins et de mods.
+    <br> <br>
+    J'ai donc décider d'ouvrir mon premier serveur Minecraft où j'ai découvert rapidement le langage Java. J'étais
+    malheureusement assez maladroit et je n'avais pas appris les principes fondamentaux du langage.
+  </p>
+  <h1 class="title">
+    • Le java mon premier langage
+  </h1>
+  <p>
+    Après l'aperçu du Java qui m'avait beaucoup plus, j'ai (grâce au <a
+    href="https://openclassrooms.com/fr/courses/26832-apprenez-a-programmer-en-java">cour Openclasroom sur
+    le Java</a>) appris plus en profondeur ce langage pour la création de petit jeux à partir de Java Swing.
+    <br> <br>
+    J'ai eu l'occasion de découvrir de nombreuses notions comme les streams, l'objet, la programmation réseau, le
+    multi-threading, et bien d'autres...
+    <br><br>
+    En effet j'ai eu l'occasion de faire beaucoup de projets personnels qui ont été une mine d'or pour l'apprentissage.
+    Certains sont disponibles dans l'onglet <a routerLink="/my-projects">Mes projets</a>.
+  </p>
+  <h1 class="title">
+    • Ouverture avec le monde du développement
+  </h1>
+  <p>
+    J'usqu'à présent je n'avais rencontré que très peu de développeur et il me manquait quelques éléments importants
+    dans mon apprentissage.
+    <br> <br>
+    J'ai pendant mon année de Seconde décider de créer un serveur Discord autour du développemement informatique, <a
+    href="https://devarea.fr/">Dev'Area</a>.
+    Aujourd'hui la communauté compte <strong>{{member_count}}</strong> membres (mis à jour grace à notre API).
+    <br> <br>
+    Dans cette communauté j'ai rencontré plein de développeurs dont de nombreux professionels grâce aux quels j'ai pu
+    découvir et apprendre les termes utilisé dans le monde du développement professionel.
+  </p>
+  <h1 class="title">
+    • Aujourd'hui...
+  </h1>
+  <p>
+    Aujourd'hui je continue à apprendre et à diversifier mes compétences dans de nombreux langages...
+  </p>
+  <h1 class="title">
+    • Mes compétences
+  </h1>
+</div>
+<div id="comp">
+  <div>
+    <img src="assets/icon/java_icon.png">
+    <p>Java</p>
+  </div>
+  <div>
+    <img src="assets/icon/cpp_icon.png">
+    <p>C++</p>
+  </div>
+  <div>
+    <img src="assets/icon/angular_icon.png">
+    <p>Angular</p>
+  </div>
+  <div>
+    <img class="rounded" src="assets/icon/typescript_icon.png">
+    <p>TS</p>
+  </div>
+  <div>
+    <img src="assets/icon/nodejs_icon.png">
+    <p>NodeJs</p>
+  </div>
+  <div>
+    <img src="assets/icon/flutter_icon.png">
+    <p>Flutter</p>
+  </div>
+  <div>
+    <img src="assets/icon/dart_icon.png">
+    <p>Dart</p>
+  </div>
+  <div>
+    <img src="assets/icon/python_icon.png">
+    <p>Python</p>
+  </div>
+  <div>
+    <img src="assets/icon/html_icon.png">
+    <p>Html</p>
+  </div>
+  <div>
+    <img src="assets/icon/css_icon.png">
+    <p>Css</p>
+  </div>
+</div>
