--- a/src/app/content/global/header/header.scss
+++ b/src/app/content/global/header/header.scss
@@ -1,5 +1,4 @@
 #header {
-
   --header-height: 35px;
 
   display: flex;
@@ -11,6 +10,8 @@
   gap: 5px;
 
   box-shadow: 0 4px 10px rgba(12, 12, 12, 0.2);
+
+  position: sticky;
 }
 
 .link {
