--- a/src/app/content/pages/my-projects/my-projects.html
+++ b/src/app/content/pages/my-projects/my-projects.html
@@ -1,1 +1,61 @@
-<p>my-projects works!</p>
+<h1 class="title">Mes projets</h1>
+<p id="description">
+  Voici une portion des projets que j'ai réalisé.
+</p>
+<div id="projectsContainer">
+  <div class="card">
+    <img src="assets/project_icon/devarea_icon.jpg">
+    <p>Backend et bot du serveur Dev'Area.</p>
+    <a href="https://github.com/DevAreaServer/Bot_DevArea">GitHub →</a>
+  </div>
+
+  <div class="card">
+    <img src="assets/project_icon/devarea_icon.jpg">
+    <p>Site du serveur Dev'Area.</p>
+    <div class="linkContainer">
+      <a href="https://devarea.fr/menu">Site</a>
+      |
+      <a href="https://github.com/DevAreaServer/DevArea_Site">GitHub →</a>
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="assets/project_icon/network_lib_java_icon.png">
+    <p>Librairie réseau à mon usage personnel.</p>
+    <a href="https://github.com/Edifay/Network-Lib-Java">GitHub →</a>
+  </div>
+
+  <div class="card">
+    <img id="rounded" src="assets/project_icon/maths_writter_icon.png">
+    <p>Petit programme pour écrire des mathématiques.</p>
+    <a href="https://github.com/Edifay/Maths-Writter">GitHub →</a>
+  </div>
+
+  <div class="card">
+    <img src="assets/project_icon/sport_icon.png">
+    <p>Application android pour former des séances de sport.</p>
+    <a href="https://github.com/Edifay/Android-Sport">GitHub →</a>
+  </div>
+
+  <div class="card">
+    <img src="assets/project_icon/fight_land_icon.png">
+    <p>Jeux de plateforme multi-joueur, 2D avec Sprites.</p>
+    <div class="linkContainer">
+      <p>GitHub :</p>
+      <a href="https://github.com/Edifay/FightLand-Client">Client</a>
+      |
+      <a href="https://github.com/Edifay/FightLand-Server">Server</a>
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="assets/_photo%20de%20profil.jpg">
+    <p>Mon site web de présentation, ce site web.</p>
+    <a href="https://github.com/Edifay/Android-Sport">GitHub →</a>
+  </div>
+
+  <div class="card">
+    <img src="assets/project_icon/mic_icon.png">
+    <p>Test de technologies pour une IA de la reconnaissance vocale.</p>
+  </div>
+</div>
