--- a/src/app/content/global/footer/footer.html
+++ b/src/app/content/global/footer/footer.html
@@ -1,4 +1,7 @@
 <hr>
 <div id="footer">
-<p>Footer</p>
+  <div class="column">
+    <p>Site pensé et réalisé dans son intégralité par Arnaud ALET.</p>
+    <p class="smaller">arnaud.a.folio@gmail.com<br>Site sous licence → GNU General Public License v3.0</p>
+  </div>
 </div>
