--- a/src/app/content/pages/contact/contact.html
+++ b/src/app/content/pages/contact/contact.html
@@ -1,1 +1,12 @@
-<p>contact works!</p>
+<div id="container">
+  <h1 class="title">
+    Me contacter
+  </h1>
+  <p>
+    Si vous avez des questions ou des propositions n'hésitez pas à m'envoyer un mail à l'adresse ci-dessous:
+    <br><br>
+    <strong class="main_color">arnaud.a.folio@gmail.com</strong>
+    <br><br>
+    Si vous voulez retrouver tout mes projets voici mon <strong><a href="https://github.com/Edifay">GitHub</a></strong>.
+  </p>
+</div>
