--- a/src/app/content/global/footer/footer.scss
+++ b/src/app/content/global/footer/footer.scss
@@ -19,3 +19,19 @@ p {
   text-align: center;
   width: 100%;
 }
+
+.column {
+  display: flex;
+
+  gap: 15px;
+
+  width: 100%;
+
+  flex-direction: column;
+
+  align-items: center;
+}
+
+.smaller {
+  font-size: 13px;
+}
