--- a/src/app/content/global/header/header.scss
+++ b/src/app/content/global/header/header.scss
@@ -51,4 +51,26 @@
   color: black;
 }
 
+@media screen and(max-width: 650px) {
+  #header {
+    gap: 0;
+  }
+  .slash {
+    font-size: 10px;
+  }
+  .link {
+    font-size: 16px;
+    padding-left: 3px;
+    padding-right: 3px;
+  }
+}
+
+
+@media screen and(max-width: 362px) {
+  .link {
+    font-size: 11px;
+    padding-left: 1px;
+    padding-right: 1px;
+  }
+}
 
