--- a/src/app/content/pages/home/home.html
+++ b/src/app/content/pages/home/home.html
@@ -5,11 +5,10 @@
     <div id="textContainer">
       <p>
         Salut ! Je suis Arnaud ALET.<br/><br/>
-        Lycéen et passionné d'informatique depuis petit, j'ai pour objectif de poursuivre dans cette vois de
+        Lycéen et passionné d'informatique depuis petit, j'ai pour objectif de poursuivre dans cette voie de
         l'informatique et du développement.<br/><br/>
         Actuellement développeur autodidacte je découvre et apprend plein de choses qui me passione en programmant tout
-        ce
-        qui me passe par la tête !<br/><br/><a routerLink="/me">En savoir plus &#8594;</a>
+        ce qui me passe par la tête !<br/><br/><a routerLink="/me">En savoir plus &#8594;</a>
       </p>
     </div>
   </div>
