--- a/src/app/content/pages/me/me.html
+++ b/src/app/content/pages/me/me.html
@@ -18,10 +18,10 @@
     tout de suite chercher à comprendre les mécanismes et les fonctionnements des logiciels.
     <br> <br>
     Quelques mois après je découvrais le jeux-vidéo <a href="https://minecraft.net">Minecraft</a> qui m'as vraiment
-    interpelé car une possibilité de
+    interpelé car il laissait une libertée de
     configuration, et de modification énorme grâce au système de plugins et de mods.
     <br> <br>
-    J'ai donc décider d'ouvrir mon premier serveur Minecraft où j'ai découvert rapidement le langage Java. J'étais
+    J'ai donc décidé d'ouvrir mon premier serveur Minecraft où j'ai découvert rapidement le langage Java. J'étais
     malheureusement assez maladroit et je n'avais pas appris les principes fondamentaux du langage.
   </p>
   <h1 class="title">
@@ -32,31 +32,33 @@
     href="https://openclassrooms.com/fr/courses/26832-apprenez-a-programmer-en-java">cour Openclasroom sur
     le Java</a>) appris plus en profondeur ce langage pour la création de petit jeux à partir de Java Swing.
     <br> <br>
-    J'ai eu l'occasion de découvrir de nombreuses notions comme les streams, l'objet, la programmation réseau, le
+    Par la suite j'ai eu l'occasion de découvrir de nombreuses notions comme les streams, l'objet, la programmation
+    réseau, le
     multi-threading, et bien d'autres...
     <br><br>
-    En effet j'ai eu l'occasion de faire beaucoup de projets personnels qui ont été une mine d'or pour l'apprentissage.
+    En effet étant très motivé j'ai fait de très nombreux de projets personnels qui ont été une mine d'or pour
+    l'apprentissage.
     Certains sont disponibles dans l'onglet <a routerLink="/my-projects">Mes projets</a>.
   </p>
   <h1 class="title">
     • Ouverture avec le monde du développement
   </h1>
   <p>
-    J'usqu'à présent je n'avais rencontré que très peu de développeur et il me manquait quelques éléments importants
+    J'usqu'à présent je n'avais rencontré que très peu de développeurs et il me manquait quelques éléments importants
     dans mon apprentissage.
     <br> <br>
-    J'ai pendant mon année de Seconde décider de créer un serveur Discord autour du développemement informatique, <a
-    href="https://devarea.fr/">Dev'Area</a>.
-    Aujourd'hui la communauté compte <strong>{{member_count}}</strong> membres (mis à jour grace à notre API).
+    C'est pourquoi j'ai, pendant mon année de Seconde, décidé de créer un serveur Discord autour du développemement
+    informatique, nommée <a href="https://devarea.fr/">Dev'Area</a>. Aujourd'hui la communauté compte
+    <strong>{{member_count}}</strong> développeurs (mis à jour grace à notre API).
     <br> <br>
-    Dans cette communauté j'ai rencontré plein de développeurs dont de nombreux professionels grâce aux quels j'ai pu
-    découvir et apprendre les termes utilisé dans le monde du développement professionel.
+    Dans cette communauté j'ai rencontré plein de développeurs dont de nombreux professionels grâce aux quel j'ai pu
+    abordé le monde professionel du développement.
   </p>
   <h1 class="title">
     • Aujourd'hui...
   </h1>
   <p>
-    Aujourd'hui je continue à apprendre et à diversifier mes compétences dans de nombreux langages...
+    Aujourd'hui je continue à apprendre et à diversifier mes compétences dans de nombreux langages, et j'espère pouvoir faire du développement mon futur métier...
   </p>
   <h1 class="title">
     • Mes compétences
