--- a/src/app/content/pages/my-projects/my-projects.html
+++ b/src/app/content/pages/my-projects/my-projects.html
@@ -1,6 +1,6 @@
 <h1 class="title">Mes projets</h1>
 <p id="description">
-  Voici une portion des projets que j'ai réalisé.
+  Voici une liste contenant certains de mes projets Open Source.
 </p>
 <div id="projectsContainer">
   <div class="card">
@@ -50,8 +50,8 @@
 
   <div class="card">
     <img src="assets/_photo%20de%20profil.jpg">
-    <p>Mon site web de présentation, ce site web.</p>
-    <a href="https://github.com/Edifay/Android-Sport">GitHub →</a>
+    <p>Mon site web de présentation, vous êtes ici ;).</p>
+    <a href="https://github.com/Edifay/Arnaud-Dev">GitHub →</a>
   </div>
 
   <div class="card">
