--- a/src/app/content/pages/home/home.html
+++ b/src/app/content/pages/home/home.html
@@ -4,10 +4,10 @@
     <img src="assets/_photo%20de%20profil.jpg"/>
     <div id="textContainer">
       <p>
-        Salut ! Je suis Arnaud ALET.<br/><br/>
+        Bonjour, je suis Arnaud ALET.<br/><br/>
         Lycéen et passionné d'informatique depuis petit, j'ai pour objectif de poursuivre dans cette voie de
         l'informatique et du développement.<br/><br/>
-        Actuellement développeur autodidacte je découvre et apprend plein de choses qui me passione en programmant tout
+        Actuellement développeur autodidacte, je découvre et apprend plein de choses qui me passione en programmant tout
         ce qui me passe par la tête !<br/><br/><a routerLink="/me">En savoir plus &#8594;</a>
       </p>
     </div>
