--- a/src/app/content/pages/me/me.html
+++ b/src/app/content/pages/me/me.html
@@ -7,19 +7,19 @@
     • Mon histoire avec la programmation
   </h1>
   <p>
-    Je vais vous expliquer rapidement comment j'ai découvert la programmation et comment j'ai poursuivit mon
+    Je vais vous expliquer rapidement comment j'ai découvert la programmation et comment j'ai poursuivi mon
     apprentissage dans ce domaine.
   </p>
   <h1 class="title">
     • Comment j'ai découvert la programmation ?
   </h1>
   <p>
-    J'ai reçu en 6ème mon premier ordinateur ce qui ma permit de découvrir pour la "première fois" l'informatique. J'ai
+    J'ai reçu en 6ème mon premier ordinateur ce qui m'a permi de découvrir pour la "première fois" l'informatique. J'ai
     tout de suite chercher à comprendre les mécanismes et les fonctionnements des logiciels.
     <br> <br>
-    Quelques mois après je découvrais le jeux-vidéo <a href="https://minecraft.net">Minecraft</a> qui m'as vraiment
-    interpelé car il laissait une libertée de
-    configuration, et de modification énorme grâce au système de plugins et de mods.
+    Quelques mois après je découvrais le jeu-vidéo <a href="https://minecraft.net">Minecraft</a> qui m'as vraiment
+    interpelé car il laissait une liberté de configuration, et de modification énorme grâce au système de plugins et de
+    mods.
     <br> <br>
     J'ai donc décidé d'ouvrir mon premier serveur Minecraft où j'ai découvert rapidement le langage Java. J'étais
     malheureusement assez maladroit et je n'avais pas appris les principes fondamentaux du langage.
@@ -28,37 +28,37 @@
     • Le java mon premier langage
   </h1>
   <p>
-    Après l'aperçu du Java qui m'avait beaucoup plus, j'ai (grâce au <a
+    Après l'aperçu du Java qui m'avait beaucoup plus, j'ai appris plus en profondeur ce langage, grâce au <a
     href="https://openclassrooms.com/fr/courses/26832-apprenez-a-programmer-en-java">cour Openclasroom sur
-    le Java</a>) appris plus en profondeur ce langage pour la création de petit jeux à partir de Java Swing.
+    le Java</a>, pour la création de petit jeux à partir de Java Swing.
     <br> <br>
     Par la suite j'ai eu l'occasion de découvrir de nombreuses notions comme les streams, l'objet, la programmation
     réseau, le
     multi-threading, et bien d'autres...
     <br><br>
-    En effet étant très motivé j'ai fait de très nombreux de projets personnels qui ont été une mine d'or pour
-    l'apprentissage.
-    Certains sont disponibles dans l'onglet <a routerLink="/my-projects">Mes projets</a>.
+    En effet étant très motivé, j'ai fait de très nombreux projets personnels qui ont été très enrichissant pour mon
+    apprentissage. Certains sont disponibles dans l'onglet <a routerLink="/my-projects">Mes projets</a>.
   </p>
   <h1 class="title">
     • Ouverture avec le monde du développement
   </h1>
   <p>
-    J'usqu'à présent je n'avais rencontré que très peu de développeurs et il me manquait quelques éléments importants
+    Jusqu'à présent je n'avais rencontré que très peu de développeurs et il me manquait quelques éléments importants
     dans mon apprentissage.
     <br> <br>
     C'est pourquoi j'ai, pendant mon année de Seconde, décidé de créer un serveur Discord autour du développemement
     informatique, nommée <a href="https://devarea.fr/">Dev'Area</a>. Aujourd'hui la communauté compte
     <strong>{{member_count}}</strong> développeurs (mis à jour grace à notre API).
     <br> <br>
-    Dans cette communauté j'ai rencontré plein de développeurs dont de nombreux professionels grâce aux quel j'ai pu
+    Dans cette communauté j'ai rencontré plein de développeurs dont de nombreux professionels grâce auxquels j'ai pu
     abordé le monde professionel du développement.
   </p>
   <h1 class="title">
     • Aujourd'hui...
   </h1>
   <p>
-    Aujourd'hui je continue à apprendre et à diversifier mes compétences dans de nombreux langages, et j'espère pouvoir faire du développement mon futur métier...
+    Aujourd'hui je continue à apprendre et à diversifier mes compétences dans de nombreux langages, et j'espère pouvoir
+    faire du développement mon futur métier...
   </p>
   <h1 class="title">
     • Mes compétences
