--- a/src/app/content/pages/my-projects/my-projects.html
+++ b/src/app/content/pages/my-projects/my-projects.html
@@ -21,7 +21,7 @@
 
   <div class="card">
     <img src="assets/project_icon/network_lib_java_icon.png">
-    <p>Librairie réseau à mon usage personnel.</p>
+    <p>Librairie réseau à mon usage personnel (TCP, UDP, TLS).</p>
     <a href="https://github.com/Edifay/Network-Lib-Java">GitHub →</a>
   </div>
 
