Corrections de fautes

--- a/src/app/content/pages/contact/contact.html
+++ b/src/app/content/pages/contact/contact.html
@@ -3,10 +3,10 @@
     Me contacter
   </h1>
   <p>
-    Si vous avez des questions ou des propositions n'hésitez pas à m'envoyer un mail à l'adresse ci-dessous:
+    Si vous avez des questions ou des propositions, n'hésitez pas à m'envoyer un mail à l'adresse ci-dessous :
     <br><br>
     <strong class="main_color">arnaud.a.folio@gmail.com</strong>
     <br><br>
-    Si vous voulez retrouver tout mes projets voici mon <strong><a href="https://github.com/Edifay">GitHub</a></strong>.
+    Si vous voulez retrouver tous mes projets voici mon <strong><a href="https://github.com/Edifay">GitHub</a></strong>.
   </p>
 </div>
