--- a/src/app/content/pages/me/me.html
+++ b/src/app/content/pages/me/me.html
@@ -15,9 +15,9 @@
   </h1>
   <p>
     J'ai reçu en 6ème mon premier ordinateur ce qui m'a permi de découvrir pour la "première fois" l'informatique. J'ai
-    tout de suite chercher à comprendre les mécanismes et les fonctionnements des logiciels.
+    tout de suite cherché à comprendre les mécanismes et les fonctionnements des logiciels.
     <br> <br>
-    Quelques mois après je découvrais le jeu-vidéo <a href="https://minecraft.net">Minecraft</a> qui m'as vraiment
+    Quelques mois après, je découvrais le jeu-vidéo <a href="https://minecraft.net">Minecraft</a> qui m'as vraiment
     interpelé car il laissait une liberté de configuration, et de modification énorme grâce au système de plugins et de
     mods.
     <br> <br>
@@ -28,36 +28,36 @@
     • Le java mon premier langage
   </h1>
   <p>
-    Après l'aperçu du Java qui m'avait beaucoup plus, j'ai appris plus en profondeur ce langage, grâce au <a
+    Après l'aperçu du Java qui m'avait beaucoup plu, j'ai appris plus en profondeur ce langage, grâce au <a
     href="https://openclassrooms.com/fr/courses/26832-apprenez-a-programmer-en-java">cour Openclasroom sur
-    le Java</a>, pour la création de petit jeux à partir de Java Swing.
+    le Java</a>, pour la création de petits jeux à partir de Java Swing.
     <br> <br>
-    Par la suite j'ai eu l'occasion de découvrir de nombreuses notions comme les streams, l'objet, la programmation
+    Par la suite, j'ai eu l'occasion de découvrir de nombreuses notions comme les streams, l'objet, la programmation
     réseau, le
     multi-threading, et bien d'autres...
     <br><br>
-    En effet étant très motivé, j'ai fait de très nombreux projets personnels qui ont été très enrichissant pour mon
+    En effet, étant très motivé, j'ai fait de très nombreux projets personnels qui ont été très enrichissants pour mon
     apprentissage. Certains sont disponibles dans l'onglet <a routerLink="/my-projects">Mes projets</a>.
   </p>
   <h1 class="title">
     • Ouverture avec le monde du développement
   </h1>
   <p>
-    Jusqu'à présent je n'avais rencontré que très peu de développeurs et il me manquait quelques éléments importants
+    Jusqu'à présent, je n'avais rencontré que très peu de développeurs et il me manquait quelques éléments importants
     dans mon apprentissage.
     <br> <br>
     C'est pourquoi j'ai, pendant mon année de Seconde, décidé de créer un serveur Discord autour du développemement
-    informatique, nommée <a href="https://devarea.fr/">Dev'Area</a>. Aujourd'hui la communauté compte
-    <strong>{{member_count}}</strong> développeurs (mis à jour grace à notre API).
+    informatique, nommée <a href="https://devarea.fr/">Dev'Area</a>. Aujourd'hui, la communauté compte
+    <strong>{{member_count}}</strong> développeurs (mis à jour grâce à notre API).
     <br> <br>
-    Dans cette communauté j'ai rencontré plein de développeurs dont de nombreux professionels grâce auxquels j'ai pu
-    abordé le monde professionel du développement.
+    Dans cette communauté, j'ai rencontré beaucoup développeurs dont de nombreux professionels grâce auxquels j'ai pu
+    aborder le monde professionel du développement.
   </p>
   <h1 class="title">
     • Aujourd'hui...
   </h1>
   <p>
-    Aujourd'hui je continue à apprendre et à diversifier mes compétences dans de nombreux langages, et j'espère pouvoir
+    Aujourd'hui, je continue à apprendre et à diversifier mes compétences dans de nombreux langages, et j'espère pouvoir
     faire du développement mon futur métier...
   </p>
   <h1 class="title">
