--- a/src/app/content/pages/me/me.html
+++ b/src/app/content/pages/me/me.html
@@ -61,56 +61,68 @@
     faire du développement mon futur métier...
   </p>
   <h1 class="title">
+    • Mes formations
+  </h1>
+  <p>
+    <span class="date">2018</span> <arrow></arrow> Réalisation d'un stage chez <a href="https://sitew.com">Site W</a>.
+    <br/>
+    <span class="date">2020</span> <arrow></arrow> Création de <a href="https://devarea.fr">Dev'Area</a>.
+    <br/>
+    <span class="date">2022</span> <arrow></arrow> Obtention d'un Bac Général spécialité Mathématiques, Physique Chimie avec option Maths Expertes.
+    <br/>
+    <span class="date">2023</span> <arrow></arrow> Première année en PeiP A à Polytech Grenoble.
+  </p>
+  <h1 class="title">
     • Mes compétences
   </h1>
-</div>
-<div id="comp">
-  <div>
-    <img src="assets/icon/java_icon.png">
-    <p>Java</p>
-  </div>
-  <div>
-    <img src="assets/icon/cpp_icon.png">
-    <p>C++</p>
-  </div>
-  <div>
-    <img src="assets/icon/angular_icon.png">
-    <p>Angular</p>
-  </div>
-  <div>
-    <img class="rounded" src="assets/icon/typescript_icon.png">
-    <p>TS</p>
-  </div>
-  <div>
-    <img src="assets/icon/nodejs_icon.png">
-    <p>NodeJs</p>
-  </div>
-  <div>
-    <img src="assets/icon/flutter_icon.png">
-    <p>Flutter</p>
-  </div>
-  <div>
-    <img src="assets/icon/dart_icon.png">
-    <p>Dart</p>
-  </div>
-  <div>
-    <img src="assets/icon/python_icon.png">
-    <p>Python</p>
-  </div>
-  <div>
-    <img src="assets/icon/html_icon.png">
-    <p>Html</p>
-  </div>
-  <div>
-    <img src="assets/icon/css_icon.png">
-    <p>Css</p>
-  </div>
-  <div>
-    <img src="assets/icon/spring_icon.png">
-    <p>Spring</p>
-  </div>
-  <div>
-    <img src="assets/icon/linux_icon.png">
-    <p>Linux</p>
+  <div id="comp">
+    <div>
+      <img src="assets/icon/java_icon.png">
+      <p>Java</p>
+    </div>
+    <div>
+      <img src="assets/icon/cpp_icon.png">
+      <p>C++</p>
+    </div>
+    <div>
+      <img src="assets/icon/angular_icon.png">
+      <p>Angular</p>
+    </div>
+    <div>
+      <img class="rounded" src="assets/icon/typescript_icon.png">
+      <p>TS</p>
+    </div>
+    <div>
+      <img src="assets/icon/nodejs_icon.png">
+      <p>NodeJs</p>
+    </div>
+    <div>
+      <img src="assets/icon/flutter_icon.png">
+      <p>Flutter</p>
+    </div>
+    <div>
+      <img src="assets/icon/dart_icon.png">
+      <p>Dart</p>
+    </div>
+    <div>
+      <img src="assets/icon/python_icon.png">
+      <p>Python</p>
+    </div>
+    <div>
+      <img src="assets/icon/html_icon.png">
+      <p>Html</p>
+    </div>
+    <div>
+      <img src="assets/icon/css_icon.png">
+      <p>Css</p>
+    </div>
+    <div>
+      <img src="assets/icon/spring_icon.png">
+      <p>Spring</p>
+    </div>
+    <div>
+      <img src="assets/icon/linux_icon.png">
+      <p>Linux</p>
+    </div>
   </div>
 </div>
