--- a/src/app/content/pages/home/home.html
+++ b/src/app/content/pages/home/home.html
@@ -5,7 +5,7 @@
     <div id="textContainer">
       <p>
         Bonjour, je suis Arnaud ALET.<br/><br/>
-        Lycéen et passionné d'informatique depuis petit, j'ai pour objectif de poursuivre dans cette voie de
+        Étudiant et passionné d'informatique depuis petit, j'ai pour objectif de poursuivre dans cette voie de
         l'informatique et du développement.<br/><br/>
         Actuellement développeur autodidacte, je découvre et apprend plein de choses qui me passionnent en programmant tout
         ce qui me passe par la tête !<br/><br/><a routerLink="/me">En savoir plus &#8594;</a>
