--- a/src/app/content/pages/my-projects/my-projects.html
+++ b/src/app/content/pages/my-projects/my-projects.html
@@ -4,13 +4,13 @@
 </p>
 <div id="projectsContainer">
   <div class="card">
-    <img src="assets/project_icon/devarea_icon.jpg">
+    <img src="assets/project_icon/devarea_icon.png">
     <p>Backend et bot du serveur Dev'Area.</p>
     <a href="https://github.com/DevAreaServer/Bot_DevArea">GitHub →</a>
   </div>
 
   <div class="card">
-    <img src="assets/project_icon/devarea_icon.jpg">
+    <img src="assets/project_icon/devarea_icon.png">
     <p>Site du serveur Dev'Area.</p>
     <div class="linkContainer">
       <a href="https://devarea.fr/menu">Site</a>
