Adding Coloc projet. And text update.

--- a/src/app/content/pages/me/me.html
+++ b/src/app/content/pages/me/me.html
@@ -48,7 +48,7 @@
     <br> <br>
     C'est pourquoi j'ai, pendant mon année de Seconde, décidé de créer un serveur Discord autour du développemement
     informatique, nommée <a href="https://devarea.fr/">Dev'Area</a>. Aujourd'hui, la communauté compte
-    <strong>{{member_count}}</strong> développeurs (mis à jour grâce à notre API).
+    <strong>{{member_count}}</strong> développeurs (mis à jour grâce à l'API).
     <br> <br>
     Dans cette communauté, j'ai rencontré beaucoup développeurs dont de nombreux professionels grâce auxquels j'ai pu
     aborder le monde professionel du développement.
@@ -57,20 +57,30 @@
     • Aujourd'hui...
   </h1>
   <p>
-    Aujourd'hui, je continue à apprendre et à diversifier mes compétences dans de nombreux langages, et j'espère pouvoir
-    faire du développement mon futur métier...
+    Aujourd'hui, je continue à apprendre et à diversifier mes compétences dans de nombreux langages. Et à y ajouter mes
+    compétences scientifiques et mathématiques que je découvre dans mes formations.
+    <br> <br>
+    Je compte utiliser au maximum les mathématiques pour me permettre d'accéder à des notions de plus en plus complexes en informatique.
   </p>
   <h1 class="title">
     • Mes formations
   </h1>
   <p>
-    <span class="date">2018</span> <arrow></arrow> Réalisation d'un stage chez <a href="https://sitew.com">Site W</a>.
+    <span class="date">2018</span>
+    <arrow></arrow>
+    Réalisation d'un stage chez <a href="https://sitew.com">Site W</a>.
     <br/>
-    <span class="date">2020</span> <arrow></arrow> Création de <a href="https://devarea.fr">Dev'Area</a>.
+    <span class="date">2020</span>
+    <arrow></arrow>
+    Création de <a href="https://devarea.fr">Dev'Area</a>.
     <br/>
-    <span class="date">2022</span> <arrow></arrow> Obtention d'un Bac Général spécialité Mathématiques, Physique Chimie avec option Maths Expertes.
+    <span class="date">2022</span>
+    <arrow></arrow>
+    Obtention d'un Bac Général spécialité Mathématiques, Physique Chimie avec option Maths Expertes.
     <br/>
-    <span class="date">2023</span> <arrow></arrow> Première année en PeiP A à Polytech Grenoble.
+    <span class="date">2023</span>
+    <arrow></arrow>
+    Première année en PeiP A à Polytech Grenoble.
   </p>
   <h1 class="title">
     • Mes compétences
