--- a/src/app/content/pages/my-projects/my-projects.html
+++ b/src/app/content/pages/my-projects/my-projects.html
@@ -6,7 +6,7 @@
   <div class="card">
     <img src="assets/project_icon/devarea_icon.png">
     <p>Backend et bot du serveur Dev'Area.</p>
-    <a href="https://github.com/DevAreaServer/Bot_DevArea">GitHub →</a>
+    <a href="https://github.com/Edifay/Bot_DevArea_2.0">GitHub →</a>
   </div>
 
   <div class="card">
@@ -52,6 +52,17 @@
     <img src="assets/_photo%20de%20profil.jpg">
     <p>Mon site web de présentation, vous êtes ici ;).</p>
     <a href="https://github.com/Edifay/Arnaud-Dev">GitHub →</a>
+  </div>
+
+  <div class="card">
+    <img src="assets/project_icon/coloc-app.png">
+    <p>Application de gestion de dépenses pour colocation.</p>
+    <div class="linkContainer">
+      <p>GitHub :</p>
+      <a href="https://github.com/Edifay/Coloc-App">Client</a>
+      |
+      <a href="https://github.com/Edifay/Coloc-Server">Server</a>
+    </div>
   </div>
 
   <div class="card">
