Little changes on projetcs.

--- a/src/app/content/pages/my-projects/my-projects.html
+++ b/src/app/content/pages/my-projects/my-projects.html
@@ -9,6 +9,7 @@
     <a href="https://github.com/Edifay/Bot_DevArea_2.0">GitHub →</a>
   </div>
 
+
   <div class="card">
     <img src="assets/project_icon/devarea_icon.png">
     <p>Site du serveur Dev'Area.</p>
@@ -17,24 +18,6 @@
       |
       <a href="https://github.com/DevAreaServer/DevArea_Site">GitHub →</a>
     </div>
-  </div>
-
-  <div class="card">
-    <img src="assets/project_icon/network_lib_java_icon.png">
-    <p>Librairie réseau à mon usage personnel (TCP, UDP, TLS).</p>
-    <a href="https://github.com/Edifay/Network-Lib-Java">GitHub →</a>
-  </div>
-
-  <div class="card">
-    <img id="rounded" src="assets/project_icon/maths_writter_icon.png">
-    <p>Petit programme pour écrire des mathématiques.</p>
-    <a href="https://github.com/Edifay/Maths-Writter">GitHub →</a>
-  </div>
-
-  <div class="card">
-    <img src="assets/project_icon/sport_icon.png">
-    <p>Application android pour former des séances de sport.</p>
-    <a href="https://github.com/Edifay/Android-Sport">GitHub →</a>
   </div>
 
   <div class="card">
@@ -49,9 +32,21 @@
   </div>
 
   <div class="card">
-    <img src="assets/_photo%20de%20profil.jpg">
-    <p>Mon site web de présentation, vous êtes ici ;).</p>
-    <a href="https://github.com/Edifay/Arnaud-Dev">GitHub →</a>
+    <img id="rounded" src="assets/project_icon/maths_writter_icon.png">
+    <p>Petit programme pour écrire des mathématiques.</p>
+    <a href="https://github.com/Edifay/Maths-Writter">GitHub →</a>
+  </div>
+
+  <div class="card">
+    <img src="assets/project_icon/network_lib_java_icon.png">
+    <p>Librairie réseau à mon usage personnel (TCP, UDP, TLS).</p>
+    <a href="https://github.com/Edifay/Network-Lib-Java">GitHub →</a>
+  </div>
+
+  <div class="card">
+    <img src="assets/project_icon/sport_icon.png">
+    <p>Application android pour former des séances de sport.</p>
+    <a href="https://github.com/Edifay/Android-Sport">GitHub →</a>
   </div>
 
   <div class="card">
@@ -63,6 +58,24 @@
       |
       <a href="https://github.com/Edifay/Coloc-Server">Server</a>
     </div>
+  </div>
+
+  <div class="card">
+    <img src="assets/project_icon/transfer_image.png">
+    <p>Système de transfer de media d'un portable vers un serveur.</p>
+    <div class="linkContainer">
+      <p>GitHub :</p>
+      <a href="https://github.com/Edifay/Transfer_Image_Client">Client</a>
+      |
+      <a href="https://github.com/Edifay/Transfer_Image_Server">Server</a>
+    </div>
+  </div>
+
+
+  <div class="card">
+    <img src="assets/_photo%20de%20profil.jpg">
+    <p>Mon site web de présentation, vous êtes ici ;).</p>
+    <a href="https://github.com/Edifay/Arnaud-Dev">GitHub →</a>
   </div>
 
   <div class="card">
