--- a/src/app/content/pages/me/me.scss
+++ b/src/app/content/pages/me/me.scss
@@ -69,29 +69,25 @@ a:hover {
 
 #comp div {
   width: 80px;
-
   display: flex;
   flex-direction: column;
-
   padding: 8px;
-
   border-radius: 10px;
-
-  user-select: none;
-
-  transition: box-shadow 0.2s ease-in-out;
+  transition: filter 0.3s ease;
 }
 
 #comp div:hover {
-  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.19);
-
-  transition: box-shadow 0.3s ease-in-out;
+  /*
+  filter: drop-shadow(-7px -10px 1px rgba(0, 0, 0, 0.20));
+  transition: filter 0.3s ease;
+  */
 }
 
 #comp img {
   margin: 0 auto;
   width: 64px;
   height: 64px;
+  user-select: none;
 }
 
 .rounded {
