--- a/src/app/content/pages/my-projects/my-projects.scss
+++ b/src/app/content/pages/my-projects/my-projects.scss
@@ -5,7 +5,7 @@
 
   gap: 40px;
 
-  width: min(1200px, 90%);
+  width: min(1500px, 90%);
 
   margin-right: auto;
   margin-left: auto;
@@ -42,20 +42,21 @@
 
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08);
 
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-out, box-shadow 0.07s ease-out;
 }
 
 .card:hover {
-  transform: scale(1.05);
+  transform: scale(1.025);
 
-  transition: transform 0.3s ease-in-out;
+  transition: transform 0.15s ease-out, box-shadow 0.3s ease-out;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 }
 
 .card img {
   width: 150px;
   border-radius: 8px;
 
-  box-shadow: 0 2px 15px rgba(0, 0, 0, 0.10);
+  //box-shadow: 0 2px 15px rgba(0, 0, 0, 0.10);
 }
 
 .card p {
