Adding And Editing some projects.

--- a/src/app/content/pages/my-projects/my-projects.html
+++ b/src/app/content/pages/my-projects/my-projects.html
@@ -38,9 +38,9 @@
   </div>
 
   <div class="card">
-    <img src="assets/project_icon/network_lib_java_icon.png">
+    <img src="assets/project_icon/jazer_icon.png">
     <p>Librairie réseau à mon usage personnel (TCP, UDP, TLS).</p>
-    <a href="https://github.com/Edifay/Network-Lib-Java">GitHub →</a>
+    <a href="https://github.com/Edifay/Jazer">GitHub →</a>
   </div>
 
   <div class="card">
@@ -58,6 +58,12 @@
       |
       <a href="https://github.com/Edifay/Coloc-Server">Server</a>
     </div>
+  </div>
+
+  <div class="card">
+    <img src="assets/project_icon/jump_game_v2_icon.png">
+    <p>Expérimentation d'un système de collision et de physique.</p>
+    <a href="https://github.com/Edifay/JumpGameV2">GitHub →</a>
   </div>
 
   <div class="card">
