Updating some events, and adding some projets.

--- a/src/app/content/pages/me/me.html
+++ b/src/app/content/pages/me/me.html
@@ -60,28 +60,33 @@
     Aujourd'hui, je continue à apprendre et à diversifier mes compétences dans de nombreux langages. Et à y ajouter mes
     compétences scientifiques et mathématiques que je découvre dans mes formations.
     <br> <br>
-    Je compte utiliser au maximum les mathématiques pour me permettre d'accéder à des notions de plus en plus complexes en informatique.
+    Je compte utiliser au maximum les mathématiques pour me permettre d'accéder à des notions de plus en plus complexes
+    en informatique.
   </p>
   <h1 class="title">
     • Mes formations
   </h1>
-  <p>
+  <div id="formations">
     <span class="date">2018</span>
     <arrow></arrow>
-    Réalisation d'un stage chez <a href="https://sitew.com">Site W</a>.
-    <br/>
+    <p>Réalisation d'un stage chez <a href="https://sitew.com">Site W</a>.</p>
+    <hr>
     <span class="date">2020</span>
     <arrow></arrow>
-    Création de <a href="https://devarea.fr">Dev'Area</a>.
-    <br/>
+    <p>Création de <a href="https://devarea.fr">Dev'Area</a>.</p>
+    <hr>
     <span class="date">2022</span>
     <arrow></arrow>
-    Obtention d'un Bac Général spécialité Mathématiques, Physique Chimie avec option Maths Expertes.
-    <br/>
+    <p>Obtention d'un Bac Général spécialité Mathématiques, Physique Chimie avec option Maths Expertes.</p>
+    <hr>
     <span class="date">2023</span>
     <arrow></arrow>
-    Première année en PeiP A à Polytech Grenoble.
-  </p>
+    <p>Stage d'excellence au Laboratoire d'Informatique de Grenoble (<a href="https://www.liglab.fr/">LIG</a>), voir dans <a routerLink="/my-projects">mes projets</a>.</p>
+    <hr>
+    <span class="date">2023-2024</span>
+    <arrow></arrow>
+    <p>Deuxième année en PeiP A à Polytech Grenoble.</p>
+  </div>
   <h1 class="title">
     • Mes compétences
   </h1>
