--- a/src/app/content/pages/my-projects/my-projects.html
+++ b/src/app/content/pages/my-projects/my-projects.html
@@ -4,6 +4,22 @@
 </p>
 <div id="projectsContainer">
   <div class="card">
+    <svg class="MuiSvgIcon-root" focusable="false" viewBox="0 0 24 24" aria-hidden="true"><path d="M17.5 4.5c-1.95 0-4.05.4-5.5 1.5-1.45-1.1-3.55-1.5-5.5-1.5-1.45 0-2.99.22-4.28.79C1.49 5.62 1 6.33 1 7.14v11.28c0 1.3 1.22 2.26 2.48 1.94.98-.25 2.02-.36 3.02-.36 1.56 0 3.22.26 4.56.92.6.3 1.28.3 1.87 0 1.34-.67 3-.92 4.56-.92 1 0 2.04.11 3.02.36 1.26.33 2.48-.63 2.48-1.94V7.14c0-.81-.49-1.52-1.22-1.85-1.28-.57-2.82-.79-4.27-.79zM21 17.23c0 .63-.58 1.09-1.2.98-.75-.14-1.53-.2-2.3-.2-1.7 0-4.15.65-5.5 1.5V8c1.35-.85 3.8-1.5 5.5-1.5.92 0 1.83.09 2.7.28.46.1.8.51.8.98v9.47z"></path><path d="M13.98 11.01c-.32 0-.61-.2-.71-.52-.13-.39.09-.82.48-.94 1.54-.5 3.53-.66 5.36-.45.41.05.71.42.66.83-.05.41-.42.71-.83.66-1.62-.19-3.39-.04-4.73.39-.08.01-.16.03-.23.03zM13.98 13.67c-.32 0-.61-.2-.71-.52-.13-.39.09-.82.48-.94 1.53-.5 3.53-.66 5.36-.45.41.05.71.42.66.83-.05.41-.42.71-.83.66-1.62-.19-3.39-.04-4.73.39-.08.02-.16.03-.23.03zM13.98 16.33c-.32 0-.61-.2-.71-.52-.13-.39.09-.82.48-.94 1.53-.5 3.53-.66 5.36-.45.41.05.71.42.66.83-.05.41-.42.7-.83.66-1.62-.19-3.39-.04-4.73.39-.08.02-.16.03-.23.03z"></path></svg>
+    <p>Participation à DBnary, projet de recherche. Suite à un stage au LIG.</p>
+    <div class="linkContainer">
+      <a href="https://kaiko.getalp.org/about-dbnary/gaelic-and-catalan-editions-are-now-part-of-dbnary/">Post</a>
+      |
+      <a href="https://gitlab.com/gilles.serasset/dbnary/-/commit/990220776b137863553528a47812062a2a754d69">GitLab →</a>
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="assets/project_icon/jump_game_v2_icon.png">
+    <p>Expérimentation d'un système de collision et de physique.</p>
+    <a href="https://github.com/Edifay/JumpGameV2">GitHub →</a>
+  </div>
+
+  <div class="card">
     <img src="assets/project_icon/devarea_icon.png">
     <p>Backend et bot du serveur Dev'Area.</p>
     <a href="https://github.com/Edifay/Bot_DevArea_2.0">GitHub →</a>
@@ -17,6 +33,34 @@
       <a href="https://devarea.fr/menu">Site</a>
       |
       <a href="https://github.com/DevAreaServer/DevArea_Site">GitHub →</a>
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="assets/project_icon/jazer_icon.png">
+    <p>Librairie réseau à mon usage personnel (TCP, TLS).</p>
+    <a href="https://github.com/Edifay/Jazer">GitHub →</a>
+  </div>
+
+  <div class="card">
+    <img src="assets/project_icon/transfer_image.png">
+    <p>Système de transfer de media d'un portable vers un serveur.</p>
+    <div class="linkContainer">
+      <p>GitHub :</p>
+      <a href="https://github.com/Edifay/Transfer_Image_Client">Client</a>
+      |
+      <a href="https://github.com/Edifay/Transfer_Image_Server">Server</a>
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="assets/project_icon/coloc-app.png">
+    <p>Application de gestion de dépenses pour colocation.</p>
+    <div class="linkContainer">
+      <p>GitHub :</p>
+      <a href="https://github.com/Edifay/Coloc-App">Client</a>
+      |
+      <a href="https://github.com/Edifay/Coloc-Server">Server</a>
     </div>
   </div>
 
@@ -38,45 +82,10 @@
   </div>
 
   <div class="card">
-    <img src="assets/project_icon/jazer_icon.png">
-    <p>Librairie réseau à mon usage personnel (TCP, UDP, TLS).</p>
-    <a href="https://github.com/Edifay/Jazer">GitHub →</a>
-  </div>
-
-  <div class="card">
     <img src="assets/project_icon/sport_icon.png">
     <p>Application android pour former des séances de sport.</p>
     <a href="https://github.com/Edifay/Android-Sport">GitHub →</a>
   </div>
-
-  <div class="card">
-    <img src="assets/project_icon/coloc-app.png">
-    <p>Application de gestion de dépenses pour colocation.</p>
-    <div class="linkContainer">
-      <p>GitHub :</p>
-      <a href="https://github.com/Edifay/Coloc-App">Client</a>
-      |
-      <a href="https://github.com/Edifay/Coloc-Server">Server</a>
-    </div>
-  </div>
-
-  <div class="card">
-    <img src="assets/project_icon/jump_game_v2_icon.png">
-    <p>Expérimentation d'un système de collision et de physique.</p>
-    <a href="https://github.com/Edifay/JumpGameV2">GitHub →</a>
-  </div>
-
-  <div class="card">
-    <img src="assets/project_icon/transfer_image.png">
-    <p>Système de transfer de media d'un portable vers un serveur.</p>
-    <div class="linkContainer">
-      <p>GitHub :</p>
-      <a href="https://github.com/Edifay/Transfer_Image_Client">Client</a>
-      |
-      <a href="https://github.com/Edifay/Transfer_Image_Server">Server</a>
-    </div>
-  </div>
-
 
   <div class="card">
     <img src="assets/_photo%20de%20profil.jpg">
