--- a/src/app/content/pages/me/me.scss
+++ b/src/app/content/pages/me/me.scss
@@ -95,6 +95,43 @@ a:hover {
 }
 
 .date {
-  width: 50px;
   display: inline-block;
+  text-align: center;
+
+  color: #2e3537;
+
+  font-size: 24px;
+}
+
+#formations {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+
+  align-items: center;
+
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+
+#formations p {
+  text-align: center;
+  margin: 0;
+
+  font-size: 18px;
+}
+
+#formations arrow {
+  transform: rotate(90deg) scale(1.5);
+}
+
+hr{
+  width: 100%;
+  height: 2px;
+
+  border: none;
+  border-radius: 20px;
+
+  background-color: rgba(227, 227, 227, 0.81);
 }
