--- a/src/app/content/pages/my-projects/my-projects.scss
+++ b/src/app/content/pages/my-projects/my-projects.scss
@@ -59,6 +59,13 @@
   //box-shadow: 0 2px 15px rgba(0, 0, 0, 0.10);
 }
 
+.card svg {
+  width: 150px;
+  height: 150px;
+
+  border-radius: 8px;
+}
+
 .card p {
   text-align: center;
 
