Add 2D_Unit project, change pdp and add competence.

--- a/src/app/content/pages/me/me.html
+++ b/src/app/content/pages/me/me.html
@@ -96,8 +96,16 @@
       <p>Java</p>
     </div>
     <div>
+      <img src="assets/icon/c.png">
+      <p>C</p>
+    </div>
+    <div>
       <img src="assets/icon/cpp_icon.png">
       <p>C++</p>
+    </div>
+    <div>
+      <img src="assets/icon/mongoDB.png">
+      <p>MongoDB</p>
     </div>
     <div>
       <img src="assets/icon/angular_icon.png">
