--- a/src/app/content/pages/me/me.html
+++ b/src/app/content/pages/me/me.html
@@ -48,7 +48,7 @@
     <br> <br>
     C'est pourquoi j'ai, pendant mon année de Seconde, décidé de créer un serveur Discord autour du développemement
     informatique, nommée <a href="https://devarea.fr/">Dev'Area</a>. Aujourd'hui, la communauté compte
-    <strong>{{member_count}}</strong> développeurs (mis à jour grâce à l'API).
+    <strong>{{member_count}}</strong> développeurs.
     <br> <br>
     Dans cette communauté, j'ai rencontré beaucoup développeurs dont de nombreux professionels grâce auxquels j'ai pu
     aborder le monde professionel du développement.
@@ -79,13 +79,18 @@
     <arrow></arrow>
     <p>Obtention d'un Bac Général spécialité Mathématiques, Physique Chimie avec option Maths Expertes.</p>
     <hr>
+    <span class="date">2022-2024</span>
+    <arrow></arrow>
+    <p>Prépa intégrée à Polytech Grenoble (L2 MIN au DLST - UGA).</p>
+    <hr>
     <span class="date">2023</span>
     <arrow></arrow>
     <p>Stage d'excellence au Laboratoire d'Informatique de Grenoble (<a href="https://www.liglab.fr/">LIG</a>), voir dans <a routerLink="/my-projects">mes projets</a>.</p>
     <hr>
-    <span class="date">2023-2024</span>
+    <span class="date">2024<i style="color:grey">-2027</i></span>
     <arrow></arrow>
-    <p>Deuxième année en PeiP A à Polytech Grenoble.</p>
+    <p>Etudiant à l'Ensimag - Grenoble INP (objectif dîplome d'ingénieurs).</p>
+    <hr>
   </div>
   <h1 class="title">
     • Mes compétences
