Adding WishWim to "Mes Projets".

--- a/src/app/content/pages/my-projects/my-projects.html
+++ b/src/app/content/pages/my-projects/my-projects.html
@@ -4,6 +4,11 @@
 </p>
 <div id="projectsContainer">
   <div class="card">
+    <img style="margin-top:40px" src="assets/project_icon/al_icon.png">
+    <p>Texte IDE complet écrit en C. Highlight, auto-complete.</p>
+    <a href="https://github.com/Edifay/WishWim">GitHub →</a>
+  </div>
+  <div class="card">
     <img src="assets/project_icon/2d_unit_test.png">
     <p>Moteur physique expérimental 2D. En C avec openGL.</p>
     <a href="https://github.com/Edifay/2D_Testing_Unit">GitHub →</a>
