little changes on  "Mes informations".

--- a/src/app/content/pages/me/me.html
+++ b/src/app/content/pages/me/me.html
@@ -89,7 +89,10 @@
     <hr>
     <span class="date">2024<i style="color:grey">-2027</i></span>
     <arrow></arrow>
-    <p>Etudiant à l'Ensimag - Grenoble INP (objectif dîplome d'ingénieurs).</p>
+    <div style="display: flex; flex-direction: row">
+      <img src="assets/favicon-Ensimag.png" style="width : 40px; height:40px ; margin-right: 10px">
+      <p style="line-height: 40px">Etudiant à l'Ensimag - Grenoble INP.</p>
+    </div>
     <hr>
   </div>
   <h1 class="title">
