--- a/src/app/content/pages/me/me.html
+++ b/src/app/content/pages/me/me.html
@@ -4,95 +4,30 @@
     <p>Arnaud ALET</p>
   </div>
   <h1 class="title">
-    • Mon histoire avec la programmation
-  </h1>
-  <p>
-    Je vais vous expliquer rapidement comment j'ai découvert la programmation et comment j'ai poursuivi mon
-    apprentissage dans ce domaine.
-  </p>
-  <h1 class="title">
-    • Comment j'ai découvert la programmation ?
-  </h1>
-  <p>
-    J'ai reçu en 6ème mon premier ordinateur ce qui m'a permi de découvrir pour la "première fois" l'informatique. J'ai
-    tout de suite cherché à comprendre les mécanismes et les fonctionnements des logiciels.
-    <br> <br>
-    Quelques mois après, je découvrais le jeu-vidéo <a href="https://minecraft.net">Minecraft</a> qui m'as vraiment
-    interpelé car il laissait une liberté de configuration, et de modification énorme grâce au système de plugins et de
-    mods.
-    <br> <br>
-    J'ai donc décidé d'ouvrir mon premier serveur Minecraft où j'ai découvert rapidement le langage Java. J'étais
-    malheureusement assez maladroit et je n'avais pas appris les principes fondamentaux du langage.
-  </p>
-  <h1 class="title">
-    • Le java mon premier langage
-  </h1>
-  <p>
-    Après l'aperçu du Java qui m'avait beaucoup plu, j'ai appris plus en profondeur ce langage, grâce au <a
-    href="https://openclassrooms.com/fr/courses/26832-apprenez-a-programmer-en-java">cour Openclasroom sur
-    le Java</a>, pour la création de petits jeux à partir de Java Swing.
-    <br> <br>
-    Par la suite, j'ai eu l'occasion de découvrir de nombreuses notions comme les streams, l'objet, la programmation
-    réseau, le
-    multi-threading, et bien d'autres...
-    <br><br>
-    En effet, étant très motivé, j'ai fait de très nombreux projets personnels qui ont été très enrichissants pour mon
-    apprentissage. Certains sont disponibles dans l'onglet <a routerLink="/my-projects">Mes projets</a>.
-  </p>
-  <h1 class="title">
-    • Ouverture avec le monde du développement
-  </h1>
-  <p>
-    Jusqu'à présent, je n'avais rencontré que très peu de développeurs et il me manquait quelques éléments importants
-    dans mon apprentissage.
-    <br> <br>
-    C'est pourquoi j'ai, pendant mon année de Seconde, décidé de créer un serveur Discord autour du développemement
-    informatique, nommée <a href="https://devarea.fr/">Dev'Area</a>. Aujourd'hui, la communauté compte
-    <strong>{{member_count}}</strong> développeurs.
-    <br> <br>
-    Dans cette communauté, j'ai rencontré beaucoup développeurs dont de nombreux professionels grâce auxquels j'ai pu
-    aborder le monde professionel du développement.
-  </p>
-  <h1 class="title">
-    • Aujourd'hui...
-  </h1>
-  <p>
-    Aujourd'hui, je continue à apprendre et à diversifier mes compétences dans de nombreux langages. Et à y ajouter mes
-    compétences scientifiques et mathématiques que je découvre dans mes formations.
-    <br> <br>
-    Je compte utiliser au maximum les mathématiques pour me permettre d'accéder à des notions de plus en plus complexes
-    en informatique.
-  </p>
-  <h1 class="title">
-    • Mes formations
+    • Formations & Expériences
   </h1>
   <div id="formations">
-    <span class="date">2018</span>
-    <arrow></arrow>
-    <p>Réalisation d'un stage chez <a href="https://sitew.com">Site W</a>.</p>
+    <p class="xpHeader"><span class="greenDot"></span><span class="title">Dîplome Ingénieur - Ensimag</span> - depuis
+      2024</p>
+    <p style="line-height: 40px">Etudiant à l'Ensimag - Grenoble INP.</p>
     <hr>
-    <span class="date">2020</span>
-    <arrow></arrow>
-    <p>Création de <a href="https://devarea.fr">Dev'Area</a>.</p>
+    <p class="xpHeader"><span class="greenDot"></span><span class="title">BugBuster</span> - Job étudiant - depuis 2024 - 7 mois</p>
+    <p style="line-height: 40px">Etudiant associé à l'Ensimag.<br>Maintenance informatique sur le matériel
+      de l’école et sur le matériel personnel des étudiants.</p>
     <hr>
-    <span class="date">2022</span>
-    <arrow></arrow>
-    <p>Obtention d'un Bac Général spécialité Mathématiques, Physique Chimie avec option Maths Expertes.</p>
+    <p class="xpHeader"><span class="grayDot"></span><span class="title">Stage Laboratoire de Recherche</span> - 2023 -
+      1 mois et demi</p>
+    <p>Stage d'excellence au Laboratoire d'Informatique de Grenoble (<a href="https://www.liglab.fr/">LIG</a>), voir
+      dans <a routerLink="/my-projects">mes projets</a>.</p>
     <hr>
-    <span class="date">2022-2024</span>
-    <arrow></arrow>
+    <p class="xpHeader"><span class="grayDot"></span><span class="title">Prépa Intégrée</span> - 2022-2024 - 2 ans</p>
     <p>Prépa intégrée à Polytech Grenoble (L2 MIN au DLST - UGA).</p>
     <hr>
-    <span class="date">2023</span>
-    <arrow></arrow>
-    <p>Stage d'excellence au Laboratoire d'Informatique de Grenoble (<a href="https://www.liglab.fr/">LIG</a>), voir dans <a routerLink="/my-projects">mes projets</a>.</p>
+    <p class="xpHeader"><span class="grayDot"></span><span class="title">Baccalauréat</span> - 2022</p>
+    <p>Spécialité Mathématiques, Physique Chimie.<br>Option Maths Expertes.</p>
     <hr>
-    <span class="date">2024<i style="color:grey">-2027</i></span>
-    <arrow></arrow>
-    <div style="display: flex; flex-direction: row">
-      <img src="assets/favicon-Ensimag.png" style="width : 40px; height:40px ; margin-right: 10px">
-      <p style="line-height: 40px">Etudiant à l'Ensimag - Grenoble INP.</p>
-    </div>
+    <p class="xpHeader"><span class="grayDot"></span><span class="title">Site W</span> - 2018 - 1 mois </p>
+    <p>Réalisation d'un stage chez <a href="https://sitew.com">Site W</a>.</p>
     <hr>
   </div>
   <h1 class="title">
